--- a/huddle-landing-page-with-single-introductory-section-master/ejercicio/index.html
+++ b/huddle-landing-page-with-single-introductory-section-master/ejercicio/index.html
@@ -23,37 +23,33 @@
         </nav>
 
         <section class="hero__main container">
-            <div class="hero__texts">
-                <h1 class="hero__title">
-                    Build the Community Yor Fans Love.
-                </h1>
-                <p class="hero__paragraph">
-                    Huddle re-imagines the way we build communities. You have a
-                    voice, but so does
-                    your audience.
-                    Create connections with your users as you engage in genuine
-                    discussion.
-                </p>
 
-                <a href="#" class="cta">Get Started For Free</a>
+            <div class="hero__texts">
+                <h1 class="hero__title">Build the Comunity Your Fans Will Love
+                </h1>
+                <p class="hero__paragraph">Huddle re-imagines the way we build
+                    comunities. You have a voice, but so does ypur audience.
+                    Creatre connections with your users as you engage in gemuine
+                    discussion</p>
+
+                <a href="#" class="cta">Get Started for free</a>
             </div>
 
             <figure class="hero__picture">
-                <img src="images/illustration-mockups.svg" alt=""
+                <img src="images/screen_mockups.svg" alt="screen_mockups"
                     class="hero__img">
             </figure>
 
             <div class="hero__numbers">
+
                 <div class="hero__item">
                     <img src="images/community.svg" alt="" class="hero__icon">
                     <h3 class="hero__number">1.4K+</h3>
                     <p class="hero__community">Communities Formed</p>
                 </div>
-            </div>
 
-            <div class="hero__numbers">
                 <div class="hero__item">
-                    <img src="images/message.svg" alt="" class="hero__icon">
+                    <img src="images/message.svg" class="hero__icon">
                     <h3 class="hero__number">2.7M+</h3>
                     <p class="hero__community">Messages Sent</p>
                 </div>
@@ -62,6 +58,135 @@
 
         <div class="wave wave--bottom"></div>
     </header>
+
+    <main class="main">
+        <section class="section">
+            <div class="section__container container">
+                <figure class="section__picture">
+                    <img src="images/illustration-grow-toguether.svg"
+                        alt="illustration-mockups" class="section__img">
+                </figure>
+
+                <div class="section__texts">
+                    <h2 class="subtitle">Grow Toguether</h2>
+                    <p class="section__paragraph">
+                        You can use any tools you like to help you complete the
+                        challenge. So if you've
+                        got something you'd like to practice, feel free to give
+                        it a go.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="section section--white">
+            <div
+                class="section__container section__container--inverse container">
+                <figure class="section__picture">
+                    <img src="images/section-white.svg"
+                        alt="illustration-mockups" class="section__img">
+                </figure>
+
+                <div class="section__texts">
+                    <h2 class="subtitle">Flowing Conversations</h2>
+                    <p class="section__paragraph">
+                        Feel free to use any workflow that you feel comfortable
+                        with. Below is a
+                        suggested process, but do not feel like you need to
+                        follow these steps:
+                    </p>
+                </div>
+            </div>
+            <div class="wave wave--top"></div>
+            <div class="wave wave--bottom"></div>
+
+        </section>
+
+        <section class="section">
+            <div class="section__container container">
+                <figure class="section__picture">
+                    <img src="images/group.svg" alt="group"
+                        class="section__img">
+                </figure>
+
+                <div class="section__texts">
+                    <h2 class="subtitle">Yours Users</h2>
+                    <p class="section__paragraph">
+                        Look through the designs to start planning out how
+                        you'll tackle the project.
+                        This step is crucial to help you think ahead for CSS
+                        classes to create reusable
+                        styles.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="question">
+            <div class="question__texts container">
+                <h2 class="subtitle">Ready to Build Your Community? </h2>
+                <a href="#" class="cta">Get Started For free</a>
+            </div>
+
+            <div class="wave wave--top"></div>
+            <div class="wave wave--bottom"></div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="footer__container container">
+            <section class="footer__newsletter">
+                <h2 class="footer__title">Newsletter</h2>
+                <p class="footer__paragraph">Lorem
+                    ipsum, dolor sit amet
+                    consectetur adipisicing elit. Suscipit eos libero optio odit
+                    pariatur perferendis expedita ea consequuntur voluptates
+                    quidem.</p>
+
+                <form class="footer__form">
+                    <input type="email" class="footer__input">
+                    <input type="submit" class="footer__cta" value="Subscribe">
+                </form>
+            </section>
+
+
+            <section class="footer__content">
+                <img src="images/logo-white.svg" alt="logo-white"
+                    class="footer__logo">
+
+                <p class="footer__paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Modi hic laudantium fugit itaque aut voluptate pariatur
+                    necessitatibus facere debitis omnis.
+                </p>
+
+                <div class="footer__contact">
+                    <img src="images/icon-phone.svg" alt="" class="footer__img">
+                </div>
+
+                <div class="footer__contact footer__contact--email">
+                    <img src="images/icon-email.svg" alt="" class="footer__img">
+                </div>
+
+                <div class="footer__social">
+                    <a href="" class="footer__link">
+                        <img src="images/facebook.svg" alt=""
+                            class="footer__icon">
+                    </a>
+
+                    <a href="" class="footer__link">
+                        <img src="images/twitter.svg" alt=""
+                            class="footer__icon">
+                    </a>
+
+                    <a href="" class="footer__link">
+                        <img src="images/instagram.svg" alt=""
+                            class="footer__icon">
+                    </a>
+                </div>
+            </section>
+        </div>
+    </footer>
 </body>
 
 </html>
